[package]
name = "lsh"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.13", features = ["blas"]}
rand = {version = "0.7", features = ["small_rng"]}
rand_distr = "0.2"
num = "0.2"
fnv = "1.0.6"

[lib]
name = "lsh"
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/bench/main.rs"