[package]
name = "floky"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version="0.9.0-alpha.1", features = ["extension-module"] }
lsh-rs = {path = "../lsh-rs", features=["blas"]}
blas-src = { version = "0.5", defeault-features = false, features = ["openblas"]}
thiserror = "1.0.13"

[lib]
name = "floky"
crate-type = ["cdylib"]
