[package]
name = "floky"
version = "0.2.1"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version="0.10.1", features = ["extension-module"] }
lsh-rs = {path = "../lsh-rs", features=["blas"]}
blas-src = { version = "0.6", defeault-features = false, features = ["openblas"]}
# static linking as we may not link to ibopenblas.so for the manylinux standard.
# See pep 513: https://www.python.org/dev/peps/pep-0513/#external-shared-libraries
openblas-src = { version = "0.9.0", default-features = false, features = ["cblas", "static"]}
thiserror = "1.0.13"
numpy = "0.9.0"
ndarray = {version = "0.13.0", features=["blas", "rayon"]}

[lib]
name = "floky"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-dist = ["tqdm~=4.40.0", "scipy", "numpy"]

[profile.release]
lto = true
