[package]
name = "lsh-rs"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# also add blas in ndarray. See Cargo.toml of bench for that.
blas = ["blas-src"]

[dependencies]
ndarray = {version = "0.13"}
blas-src = { version = "0.5", defeault-features = false, optional = true}
rand = {version = "0.7", features = ["small_rng"]}
rand_distr = "0.2"
num = "0.2"
fnv = "1.0.6"
ndarray-rand = "0.11.0"

[lib]
name = "lsh"
path = "src/lib.rs"

