[package]
name = "lsh-rs"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"
license = "MIT"
description = "LSH Approximate Nearest Neighbor Search with Locality Sensitive Hashing."
repository = "https://github.com/ritchie46/lsh-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# also add blas in ndarray. See Cargo.toml of bench for that.
blas = ["blas-src", "ndarray/blas"]

[dependencies]
ndarray = {version = "0.13", features=["serde"]}
blas-src = { version = "0.5", defeault-features = false, optional = true}
rand = {version = "0.7", features = ["small_rng"]}
rand_distr = "0.2"
num = "0.2"
fnv = "1.0.6"
ndarray-rand = "0.11.0"
serde_cbor = { version = "0.11.1" }
serde = { version = "1.0.104", features = ["derive"] }

[lib]
name = "lsh_rs"
path = "src/lib.rs"

