[package]
name = "reverse-img-search"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsh-rs = {path = "../../lsh-rs", features=["blas"]}
ndarray = {version = "0.13", features=["blas"]}
blas-src = { version = "0.5", defeault-features = false, features = ["openblas"]}
image = "0.23.1"
serde_cbor = "0.11.1"
serde = { version="1.0.104" }
rayon = "1.3.0"