[package]
name = "reverse-img-search"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

[dependencies]
lsh-rs = {path = "../../lsh-rs", features=["blas", "stats"]}
blas-src = { version = "0.5", defeault-features = false, features = ["openblas"]}
ndarray = {version = "0.13", features=["blas", "rayon"]}
image = "0.23.1"
bincode = "1.2.1"
serde = { version="1.0.104" }
rayon = "1.3.0"

[[bin]]
name = "reverse-img-search"
path = "src/main.rs"

[lib]
name = "reverse_img_search"
path = "src/lib.rs"