[package]
name = "img-bench"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reverse-img-search = {path = ".."}
blas-src = { version = "0.6", defeault-features = false, features = ["openblas"]}
